--- a/index.html
+++ b/index.html
@@ -112,11 +112,6 @@
                 line-height: 2.5rem;
             }
 
-            a,
-            p {
-                overflow-x:auto;
-                overflow-y: auto;
-            }
 
             /* Contact grid becomes single column */
             .grid {
@@ -135,8 +130,7 @@
             p,
             a {
                 font-size: 0.95rem;
-                overflow-x: auto;
-                overflow-y: auto;
+
             }
 
             /* Logo spacing */
@@ -200,10 +194,6 @@
                 margin-top: 2.5rem;
             }
 
-            a,
-            p {
-                overflow: auto
-            }
 
         }
     </style>
@@ -260,9 +250,9 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div>
-                            <h3 class="font-poppins text-base font-semibold text-slate-800 mb-1">Email Address</h3>
+                            <h3 class="font-poppins text-base break-word font-semibold text-slate-800 mb-1">Email Address</h3>
                             <a href="mailto:ayutronpharmaceuticalllp@gmail.com"
-                                class="font-inter text-gray-600 text-base overflow-auto hover:text-brand-green">ayutronpharmaceuticalllp@gmail.com</a>
+                                class="font-inter text-gray-600 text-base break-word hover:text-brand-green">ayutronpharmaceuticalllp@gmail.com</a>
                         </div>
                     </div>
                     <!-- Website -->
@@ -322,9 +312,8 @@
                         </div>
                         <div>
                             <h3 class="font-poppins text-lg font-semibold text-slate-800 mb-1">Registered Office</h3>
-                            <p class="font-inter text-gray-600 leading-relaxed text-lg max-w-md">
-                                B-23, Sarunagar Society,<br>
-                                Piplod, Surat - 395007 (Gujarat) - INDIA
+                            <p class="font-inter text-gray-600 break-word leading-relaxed text-lg max-w-md">
+                                B-23, Sarunagar Society,<br>Surat - 395007 (Guj.) - INDIA
                             </p>
                         </div>
                     </div>
