--- a/index.html
+++ b/index.html
@@ -285,12 +285,11 @@
                             <h3 class="font-poppins text-base font-semibold text-slate-800 mb-1">Products & Profile</h3>
                             <a href="https://drive.google.com/drive/folders/1B_tcRt3Hpkhif_huCyAHkOMLdtBPMy86?usp=drive_link"
                                 class="font-inter text-brand-green hover:underline text-base cursor-pointer"
-                                target="_blank">Products</a>
-                            <br><a
-                                href="https://drive.google.com/drive/folders/1H9htnEgAM9GABySHq7TjHmotvlFt62iS?usp=drive_link"
-                                class="font-inter text-brand-green hover:underline text-base cursor-pointer"
-                                target="_blank">Company
-                                Profile</a><!-- <p class="font-inter text-gray-600 text-base">+91-9638287740</p> -->
+                                target="_blank">View Products</a>
+                            <br><a 
+                               href="https://drive.google.com/drive/folders/1H9htnEgAM9GABySHq7TjHmotvlFt62iS?usp=drive_link"
+                                class="font-inter text-brand-green hover:underline text-base cursor-pointer" target="_blank">
+                                View Company Profile</a>
                         </div>
                     </div>
 
@@ -308,7 +307,7 @@
                             <a href="https://wa.me/917801864480?text=Let’s%20connect"
                                 class="font-inter text-gray-600 text-base" target="_blank">WhatsApp us at:
                                 +91-7801864480</a>
-                            <!-- <p class="font-inter text-gray-600 text-base">+91-9638287740</p> -->
+                           
                         </div>
                     </div>
 
@@ -350,3 +349,4 @@
 </body>
 
 </html>
+
