--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
                         </div>
                         <div>
                             <h3 class="font-poppins text-base font-semibold text-slate-800 mb-1">Website</h3>
-                            <p class="font-inter text-brand-green hover:underline text-base cursor-pointer">
+                            <a href="https://ayutronpharmaceuticalllp.com/" class="font-inter text-brand-green hover:underline text-base cursor-pointer">
                                 ayutronpharmaceuticalllp.com
-                            </p>
+                            </a>
                         </div>
                     </div>
 
