Company Profile link

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                 class="font-inter text-brand-green hover:underline text-base cursor-pointer"
                                 target="_blank">View Products</a>
                             <br><a
-                                href="https://drive.google.com/drive/folders/1H9htnEgAM9GABySHq7TjHmotvlFt62iS?usp=drive_link"
+                                href="./assets/Company Profile - Ayutron.pdf"
                                 class="font-inter text-brand-green hover:underline text-base cursor-pointer"
                                 target="_blank">
                                 View Company Profile</a>
